--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -73,7 +73,7 @@ role_parameters: {}
 
 # Corresponds to MetricsQdrAddresses in THT
 # Addresses configuration (array of hashes).
-metrics_qdr_addresses: [{'prefix': u'collectd', 'distribution': u'multicast'}, {'prefix': u'ceilometer/metering.sample', 'distribution': u'multicast'}, {'prefix': u'ceilometer/event.sample', 'distribution': u'multicast'}]
+metrics_qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
 
 # Corresponds to MetricsQdrUsername in THT
 # Username which should be used to authenticate to the deployed qdrouterd.
@@ -84,7 +84,7 @@ metrics_qdr_username: guest
 metrics_qdr_port: 5666
 
 # Corresponds to MetricsQdrLoggingSource in THT
-metrics_qdr_logging_source: {'startmsg.regex': u'^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}(.[0-9]+ \\+[0-9]+)? [A-Z]+ \\([a-z]+\\) ', 'tag': u'openstack.nova.consoleauth', 'file': u'/var/log/containers/qdrouterd/metrics_qdr.log'}
+metrics_qdr_logging_source: {'startmsg.regex': '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}(.[0-9]+ \\+[0-9]+)? [A-Z]+ \\([a-z]+\\) ', 'tag': 'openstack.nova.consoleauth', 'file': '/var/log/containers/qdrouterd/metrics_qdr.log'}
 
 # ContainerMetricsQdrImage has no default set in THT, so container_metrics_qdr_image
 # will not be set, but my be passed to this role anyway.
