WIP: Major work in place
* Got edge-only and controller-mesh modes both working in infrared
* Basic molecule testing in place
* SSL will need a second pass
* Still some TODOs mentioned in the code and my notes

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,11 +2,11 @@ galaxy_info:
   author: Chris Sibbitt
   description: TripleO qdr ansible interface
   company: Red Hat
-
   license: Apache-2.0
-
   min_ansible_version: 2.9
-
+  platforms:
+  - name: EL
+    versions:
+    - 8
   galaxy_tags: []
-
 dependencies: []
