--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,41 +1,38 @@
 ---
-###############################################################################
-# TODO: Add the default values in here for any of the converted heat params
-# from tripleo-heat-templates. This serves two purposes: it facilitates
-# testing, and it allows for removal of THT params in the future without
-# affecting the ansible role.
-###############################################################################
-# TODO: Check for any multi-line strings, these aren't handled by this
-# template
-###############################################################################
+qdr_conf_output_dir: /var/lib/config-data/ansible-generated/metrics_qdr
+
 # Corresponds to MetricsQdrConnectors in THT
 # Connectors configuration (array of hashes).
-metrics_qdr_connectors: []
+qdr_connectors: []
 
 # Corresponds to MetricsQdrUseSSL in THT
 # Set to true if it is required to use SSL or TLS on the connection for listener.
-metrics_qdr_use_ssl: False
+qdr_listener_require_ssl: no
 
 # Corresponds to MetricsQdrTrustedCerts in THT
 # Path to file containing trusted certificates for listener.
-metrics_qdr_trusted_certs: 
+qdr_listener_trusted_certs:
 
 # Corresponds to ServiceNetMap in THT
 # Mapping of service_name -> network name. Typically set via parameter_defaults
 # in the resource registry.  This mapping overrides those in
 # ServiceNetMapDefaults.
-service_net_map: {}
+
+# ***** Already exists in group_vars?
+# tripleo_service_net_map: {}
 
 # Corresponds to MonitoringSubscriptionQdr in THT
-monitoring_subscription_qdr: overcloud-qdr
+# ***** Don't need?
+#monitoring_subscription_qdr: overcloud-qdr
 
 # Corresponds to MetricsQdrPassword in THT
 # Password which should be used to authenticate to the deployed qdrouterd.
-metrics_qdr_password: guest
+qdr_password: guest
 
 # Corresponds to RoleName in THT
 # Role name on which the service is applied
-role_name: 
+# ***** Already exists in inventory_vars?
+#tripleo_role_name:
 
 # Corresponds to MetricsQdrUseEncryption in THT
 # Set to true if it is required to encrypt connection to the peer for listener.
@@ -43,14 +40,14 @@ metrics_qdr_use_encryption: False
 
 # Corresponds to MetricsQdrSslPwFile in THT
 # Path to SSL password file for certificate key for listener.
-metrics_qdr_ssl_pw_file: 
+qdr_listener_ssl_pw_file:
 
 # Corresponds to DefaultPasswords in THT
 default_passwords: {}
 
 # Corresponds to MetricsQdrAutoLinks in THT
 # AutoLinks for the Configured Addresses
-metrics_qdr_auto_links: []
+qdr_autolink_addresses: []
 
 # Corresponds to MetricsQdrExternalEndpoint in THT
 # Whether QDR should listen on external network interface. To enable listening
@@ -61,7 +58,7 @@ metrics_qdr_external_endpoint: False
 # Corresponds to InternalTLSCAFile in THT
 # Specifies the default CA cert to use if TLS is used for services in the
 # internal network.
-internal_tlscafile: /etc/ipa/ca.crt
+tripleo_internal_tlscafile: /etc/ipa/ca.crt
 
 # Corresponds to EnableSTF in THT
 # Set to true to enable configuration for STF client.
@@ -73,65 +70,65 @@ role_parameters: {}
 
 # Corresponds to MetricsQdrAddresses in THT
 # Addresses configuration (array of hashes).
-metrics_qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
+qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
 
 # Corresponds to MetricsQdrUsername in THT
 # Username which should be used to authenticate to the deployed qdrouterd.
-metrics_qdr_username: guest
+qdr_username: guest
 
 # Corresponds to MetricsQdrPort in THT
 # Service name or port number on which the qdrouterd will accept connections.
-metrics_qdr_port: 5666
+qdr_listener_port: 5666
+
+qdr_log_output: /var/log/qdrouterd/metrics_qdr.log
 
 # Corresponds to MetricsQdrLoggingSource in THT
 metrics_qdr_logging_source: {'startmsg.regex': '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}(.[0-9]+ \\+[0-9]+)? [A-Z]+ \\([a-z]+\\) ', 'tag': 'openstack.nova.consoleauth', 'file': '/var/log/containers/qdrouterd/metrics_qdr.log'}
 
-# ContainerMetricsQdrImage has no default set in THT, so container_metrics_qdr_image
-# will not be set, but my be passed to this role anyway.
-# container_metrics_qdr_image : <undefined>
-
 # Corresponds to ServiceData in THT
 # Dictionary packing service data
-service_data: {}
+
+# ***** Don't need?
+#tripleo_service_data: {}
 
 # Corresponds to MetricsQdrSSLProfiles in THT
 # SSL Profiles for the connectors (array of hashes).
-metrics_qdr_sslprofiles: []
+qdr_ssl_profiles: []
 
 # Corresponds to EndpointMap in THT
 # Mapping of service endpoint -> protocol. Typically set via parameter_defaults
 # in the resource registry.
-endpoint_map: {}
+# ***** Don't need?
+tripleo_endpoint_map: {}
 
 # Corresponds to MetricsQdrSslCertFile in THT
 # Path to SSL certificate file for listener.
-metrics_qdr_ssl_cert_file: 
-
-# ContainerMetricsQdrConfigImage has no default set in THT, so container_metrics_qdr_config_image
-# will not be set, but my be passed to this role anyway.
-# container_metrics_qdr_config_image : <undefined>
+qdr_listener_ssl_cert_file: /etc/pki/tls/certs/metrics_qdr.crt
 
 # Corresponds to MetricsQdrSslCertDb in THT
 # Path to SSL certificate db for listener.
-metrics_qdr_ssl_cert_db: 
+qdr_listener_ssl_cert_db: /etc/pki/tls/certs/ca-bundle.crt
 
 # Corresponds to MetricsQdrSaslMechanisms in THT
 # List of accepted SASL auth mechanisms for listener in format of comma separated
 # list.
-metrics_qdr_sasl_mechanisms: ANONYMOUS
+qdr_listener_sasl_mech: ANONYMOUS
 
 # Corresponds to MetricsQdrSslPassword in THT
 # SSL password to be supplied for listener.
-metrics_qdr_ssl_password: 
+qdr_listener_ssl_password:
 
 # Corresponds to MetricsQdrSslKeyFile in THT
 # Path to SSL private key file for listener.
-metrics_qdr_ssl_key_file: 
+qdr_listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
 
 # Corresponds to MetricsQdrAuthenticateClient in THT
 # Authenticate the client using SSL/TLS
-metrics_qdr_authenticate_client: no
+qdr_listener_auth_peer: no
 
 # Corresponds to EnableInternalTLS in THT
-enable_internal_tls: False
+tripleo_enable_internal_tls: no
 
+qdr_router_mode: edge
+
+qdr_extra_listeners: []
