--- a/tasks/host_prep_tasks.yml
+++ b/tasks/host_prep_tasks.yml
@@ -1,18 +1,17 @@
 ---
-###############################################################################
-# TODO: Check for incorrectly imported Heat functions e.g. get_param, which is
-# formatted as yaml here, and replace with the right var that was passed to
-# ansible via RoleParametersValue
-###############################################################################
-- file:
+- name: Create required host directories
+  file:
     mode: '{{ item.mode|default(omit) }}'
     path: '{{ item.path }}'
     setype: '{{ item.setype }}'
     state: directory
-  # name: create persistent logs directory
   with_items:
-  - mode: '0750'
-    path: /var/log/containers/metrics_qdr
+  - path: /var/log/containers/metrics_qdr
     setype: container_file_t
+    mode: '0750'
   - path: /var/lib/metrics_qdr
     setype: container_file_t
+    mode: '0750'
+  - path: /var/lib/config-data/ansible-generated/metrics_qdr
+    setype: container_file_t
+    mode: '0750'
