--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Set-up vars based on THT inputs
   set_fact:
 
-# I'm trying to move THT login here by feeding through the required THT vars
+# I'm trying to move THT logic here by feeding through the required THT vars
 
 # Examples from collectd
     # amqp_connection: "{{ (collectd_connection_type == 'amqp1')|default(false) }}"
@@ -24,26 +24,11 @@
           # - tripleo::profile::base::metrics::qdr::external_listener_addr:
           #     get_param: [EndpointMap, MetricsQdrPublic, host]
 
-# For now it's a dummy value to make sure the input works, logic comes next
-    listener_addr:  1.2.3.4
-# So this would be somethng like `hiera(ServiceNetMap['StandaloneMetricsQdrNetwork'])`
-# Which I think is like `hiera('External')` or `hiera('InternalApi')`
-# Which ultimately yields an IP
-# Is the hiera because this ultimately goes into a pupper template which reads this from the host? Can I get this without hiera?
+    listener_addr: lookup('hiera', tripleo_service_net_map[tripleo_role_name + 'MetricsQdrNetwork'])
 
-          #     str_replace:
-          #       template:
-          #         "%{hiera('$NETWORK')}"
-          #       params:
-          #         $NETWORK:
-          #           get_param:
-          #             - ServiceNetMap
-          #             - str_replace:
-          #                 template: "ROLENAMEMetricsQdrNetwork"
-          #                 params:
-          #                   ROLENAME: {get_param: RoleName}
-          #   qdr::log_enable: 'info+'
-          #   qdr::log_output: '/var/log/qdrouterd/metrics_qdr.log'
+# TODO: Get these fed through as new QdrVars, right now there is no good way to alter them
+    log_enable: 'info+'
+    log_output: '/var/log/qdrouterd/metrics_qdr.log'
 
 # Part of this may need to stay in the THT - it looks like it sets THT vars that drive certmonger
           # - if:
