--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,15 +10,15 @@
 ###############################################################################
 # Corresponds to MetricsQdrConnectors in THT
 # Connectors configuration (array of hashes).
-connectors: []
+qdr_connectors: []
 
 # Corresponds to MetricsQdrUseSSL in THT
 # Set to true if it is required to use SSL or TLS on the connection for listener.
-listener_require_ssl: False
+qdr_listener_require_ssl: False
 
 # Corresponds to MetricsQdrTrustedCerts in THT
 # Path to file containing trusted certificates for listener.
-metrics_qdr_trusted_certs:
+qdr_listener_trusted_certs:
 
 # Corresponds to ServiceNetMap in THT
 # Mapping of service_name -> network name. Typically set via parameter_defaults
@@ -31,7 +31,7 @@ monitoring_subscription_qdr: overcloud-qdr
 
 # Corresponds to MetricsQdrPassword in THT
 # Password which should be used to authenticate to the deployed qdrouterd.
-password: guest
+qdr_password: guest
 
 # Corresponds to RoleName in THT
 # Role name on which the service is applied
@@ -43,14 +43,14 @@ metrics_qdr_use_encryption: False
 
 # Corresponds to MetricsQdrSslPwFile in THT
 # Path to SSL password file for certificate key for listener.
-metrics_qdr_ssl_pw_file:
+qdr_listener_ssl_pw_file:
 
 # Corresponds to DefaultPasswords in THT
 default_passwords: {}
 
 # Corresponds to MetricsQdrAutoLinks in THT
 # AutoLinks for the Configured Addresses
-auto_links: []
+qdr_autolink_addresses: []
 
 # Corresponds to MetricsQdrExternalEndpoint in THT
 # Whether QDR should listen on external network interface. To enable listening
@@ -73,15 +73,15 @@ role_parameters: {}
 
 # Corresponds to MetricsQdrAddresses in THT
 # Addresses configuration (array of hashes).
-addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
+qdr_addresses: [{'prefix': 'collectd', 'distribution': 'multicast'}, {'prefix': 'ceilometer/metering.sample', 'distribution': 'multicast'}, {'prefix': 'ceilometer/event.sample', 'distribution': 'multicast'}]
 
 # Corresponds to MetricsQdrUsername in THT
 # Username which should be used to authenticate to the deployed qdrouterd.
-username: guest
+qdr_username: guest
 
 # Corresponds to MetricsQdrPort in THT
 # Service name or port number on which the qdrouterd will accept connections.
-listener_port: 5666
+qdr_listener_port: 5666
 
 # Corresponds to MetricsQdrLoggingSource in THT
 metrics_qdr_logging_source: {'startmsg.regex': '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}(.[0-9]+ \\+[0-9]+)? [A-Z]+ \\([a-z]+\\) ', 'tag': 'openstack.nova.consoleauth', 'file': '/var/log/containers/qdrouterd/metrics_qdr.log'}
@@ -92,7 +92,7 @@ tripleo_service_data: {}
 
 # Corresponds to MetricsQdrSSLProfiles in THT
 # SSL Profiles for the connectors (array of hashes).
-ssl_profiles: []
+qdr_ssl_profiles: []
 
 # Corresponds to EndpointMap in THT
 # Mapping of service endpoint -> protocol. Typically set via parameter_defaults
@@ -101,28 +101,28 @@ tripleo_endpoint_map: {}
 
 # Corresponds to MetricsQdrSslCertFile in THT
 # Path to SSL certificate file for listener.
-listener_ssl_cert_file: /etc/pki/tls/certs/metrics_qdr.crt
+qdr_listener_ssl_cert_file: /etc/pki/tls/certs/metrics_qdr.crt
 
 # Corresponds to MetricsQdrSslCertDb in THT
 # Path to SSL certificate db for listener.
-listener_ssl_cert_db: /etc/pki/tls/certs/ca-bundle.crt
+qdr_listener_ssl_cert_db: /etc/pki/tls/certs/ca-bundle.crt
 
 # Corresponds to MetricsQdrSaslMechanisms in THT
 # List of accepted SASL auth mechanisms for listener in format of comma separated
 # list.
-listener_sasl_mech: ANONYMOUS
+qdr_listener_sasl_mech: ANONYMOUS
 
 # Corresponds to MetricsQdrSslPassword in THT
 # SSL password to be supplied for listener.
-metrics_qdr_ssl_password:
+qdr_listener_ssl_password:
 
 # Corresponds to MetricsQdrSslKeyFile in THT
 # Path to SSL private key file for listener.
-listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
+qdr_listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
 
 # Corresponds to MetricsQdrAuthenticateClient in THT
 # Authenticate the client using SSL/TLS
-listener_auth_peer: no
+qdr_listener_auth_peer: no
 
 # Corresponds to EnableInternalTLS in THT
 tripleo_enable_internal_tls: False
