--- a/tasks/deploy_steps_tasks.yml
+++ b/tasks/deploy_steps_tasks.yml
@@ -67,6 +67,6 @@
   block:
     - name: "Generate the qdr config files"
       include_role:
-        name: qdr_config
+        name: qdr-config-ansible-role
       vars:
         qdr_conf_output_dir: /var/lib/config-data/ansible-generated/metrics_qdr
