--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,7 +14,7 @@ qdr_connectors: []
 
 # Corresponds to MetricsQdrUseSSL in THT
 # Set to true if it is required to use SSL or TLS on the connection for listener.
-qdr_listener_require_ssl: False
+qdr_listener_require_ssl: no
 
 # Corresponds to MetricsQdrTrustedCerts in THT
 # Path to file containing trusted certificates for listener.
@@ -24,10 +24,13 @@ qdr_listener_trusted_certs:
 # Mapping of service_name -> network name. Typically set via parameter_defaults
 # in the resource registry.  This mapping overrides those in
 # ServiceNetMapDefaults.
-tripleo_service_net_map: {}
+
+# ***** Already exists in group_vars?
+# tripleo_service_net_map: {}
 
 # Corresponds to MonitoringSubscriptionQdr in THT
-monitoring_subscription_qdr: overcloud-qdr
+# ***** Don't need?
+#monitoring_subscription_qdr: overcloud-qdr
 
 # Corresponds to MetricsQdrPassword in THT
 # Password which should be used to authenticate to the deployed qdrouterd.
@@ -35,7 +38,8 @@ qdr_password: guest
 
 # Corresponds to RoleName in THT
 # Role name on which the service is applied
-tripleo_role_name:
+# ***** Already exists in inventory_vars?
+#tripleo_role_name:
 
 # Corresponds to MetricsQdrUseEncryption in THT
 # Set to true if it is required to encrypt connection to the peer for listener.
@@ -88,7 +92,9 @@ metrics_qdr_logging_source: {'startmsg.regex': '^[0-9]{4}-[0-9]{2}-[0-9]{2} [0-9
 
 # Corresponds to ServiceData in THT
 # Dictionary packing service data
-tripleo_service_data: {}
+
+# ***** Don't need?
+#tripleo_service_data: {}
 
 # Corresponds to MetricsQdrSSLProfiles in THT
 # SSL Profiles for the connectors (array of hashes).
@@ -97,6 +103,7 @@ qdr_ssl_profiles: []
 # Corresponds to EndpointMap in THT
 # Mapping of service endpoint -> protocol. Typically set via parameter_defaults
 # in the resource registry.
+# ***** Don't need?
 tripleo_endpoint_map: {}
 
 # Corresponds to MetricsQdrSslCertFile in THT
@@ -125,7 +132,7 @@ qdr_listener_ssl_key_file: /etc/pki/tls/certs/metrics_qdr.key
 qdr_listener_auth_peer: no
 
 # Corresponds to EnableInternalTLS in THT
-tripleo_enable_internal_tls: False
+tripleo_enable_internal_tls: no
 
 qdr_router_mode: edge
 
